[package]
name = "float"
version = "0.1.0"
edition = "2021"
auther = "mralians"
license = "MIT OR Apache-2.0"
keywords = ["float", "num"]
categories = ["num"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "decode_bench"
harness = false
